--- a/index.html
+++ b/index.html
@@ -209,15 +209,22 @@
 
     <div id="education" style="background-color: #effeff;">
         <h2 class="heading">Publications</h2>
+        
+        <div class="education-block">
+            <h3>VisualCodeMOOC: Programming Course Platform Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
+            <h4><strong style="color: #333333;">Li Mingyuan</strong>; Wang Duan; Purwanto Erick; Selig Thomas; Zhang Qing; Liang Hai-Ning</h4>
+            <div class="gpa">
+                <p><i>SoftwareX [Under Review: Submitted Oct. 2024]</i></p>
+            </div>
+        </div>
 
         <div class="education-block">
-            <h3>Cervical Spine Fracture Detection Through Two-Stage Approach of Mask Segmentation and
-                Windowing Based on Convolutional Neural Network</h3>
-            <h4>Kim Doyeon; Ning Xujia; Liang Kaicheng; Ni Yi; Wang Duan; <strong style="color: #333333;">Li Mingyuan</strong>; Wang Yichuan; Purwanto Erick; Man Lok Ka</h4>
+            <h3>Chatbot-Powered Learning for Sustainable Education in Programming</h3>
+            <h4>Purwanto Erick; Li Na; Zhang Qing; Selig Thomas; Wang Yihong; Ma Teng; Juwono Filbert; Fan Pengfei, (student member) <strong style="color: #333333;">Li Mingyuan</strong> and Wang Duan</h4>
             <div class="gpa">
-                <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
+                <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Read the full paper</a></p>
+            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Read the full paper</a></p>
         </div>
 
         <div class="education-block">
@@ -232,20 +239,13 @@
         </div>
 
         <div class="education-block">
-            <h3>Chatbot-Powered Learning for Sustainable Education in Programming</h3>
-            <h4>Purwanto Erick; Li Na; Zhang Qing; Selig Thomas; Wang Yihong; Ma Teng; Juwono Filbert; Fan Pengfei, (student member) <strong style="color: #333333;">Li Mingyuan</strong> and Wang Duan</h4>
+            <h3>Cervical Spine Fracture Detection Through Two-Stage Approach of Mask Segmentation and
+                Windowing Based on Convolutional Neural Network</h3>
+            <h4>Kim Doyeon; Ning Xujia; Liang Kaicheng; Ni Yi; Wang Duan; <strong style="color: #333333;">Li Mingyuan</strong>; Wang Yichuan; Purwanto Erick; Man Lok Ka</h4>
             <div class="gpa">
-                <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
+                <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
             </div>
-            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Read the full paper</a></p>
-        </div>
-
-        <div class="education-block">
-            <h3>VisualCodeMOOC: Programming Course Platform Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
-            <h4><strong style="color: #333333;">Li Mingyuan</strong>; Wang Duan; Purwanto Erick; Selig Thomas; Zhang Qing; Liang Hai-Ning</h4>
-            <div class="gpa">
-                <p><i>SoftwareX [Under Review: Submitted Oct. 2024]</i></p>
-            </div>
+            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Read the full paper</a></p>
         </div>
     </div>
     <!-- End #education -->
@@ -442,7 +442,7 @@
 
     <div id="education" >
         <h2 class="heading">Course Projects</h2>
-        <p><a href="https://github.com/Sushang-Li/UGCourseProjects" target="_blank">
+        <p style="font-size: 16.5px;"><a href="https://github.com/Sushang-Li/UGCourseProjects" target="_blank">
             Access the details of all course projects on GitHub
         </a></p>
         <div class="education-block">
