--- a/index.html
+++ b/index.html
@@ -524,7 +524,26 @@
     </div>
     <!-- End #education -->
 
-    <div id="skills" class="background-alt">
+    <div id="education" style="background-color: #f2f2f5;">
+        <h2 class="heading">Internship</h2>
+        <div class="education-block">
+            <h3><strong>Guangzhou Hehui Technology Co.</strong> </h3>
+            <h4>Java Software Engineer Intern; Mar-Jun/2023</h4>
+            <div class="gpa">
+                <li style="font-size: 15 px">
+                    Contributed to the development of a pharmaceutical ordering system.
+                </li>
+                <li style="font-size: 15 px">
+                    Optimized the code structure with a low coupling design principle to ensure maintainability and scalability.  
+                </li>
+                <li style="font-size: 15 px">       
+                    Effectively managed MySQL databases, and designed database structures that adhere to the Third Normal Form
+                </li>
+            </div>
+        </div>
+    </div>
+
+    <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>Python (2 Years+)</li>
