--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div id="lead-content">
             <h1>Mingyuan Li</h1>
             <h2 class="custom-font-SmileySansOblique">霆霓快雨</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="5---CV[3053].pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -220,8 +220,8 @@
 
             </ul>
             <div class="gpa">
-                <p><strong>WES GPA:</strong> 3.77/4.0 &nbsp;&nbsp; <strong><a href="#" id="transcriptLink1">Check the WES unofficial transcript</a></strong>
-                    <img id="transcriptImage1" src="images\wes_report.png" alt="WES Unofficial Transcript"></p> 
+                <p><strong>WES GPA:</strong> 3.77/4.0 &nbsp;&nbsp; <strong><a href="#" id="transcriptLink">Check the WES unofficial transcript</a></strong>
+                    <img id="transcriptImage" src="images\wes_report.png" alt="WES Unofficial Transcript"></p> 
                 
                 <p><strong>Major GPA:</strong> 3.82/4.0</p>
                 <p> Ranked in the top 1.97% in Java Programming.</p>
@@ -229,8 +229,9 @@
                 <p> Ranked approximately in the top 5% in Advanced OO Programming.</p>
 
                 <br>
-                <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
-                <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript">
+                <!-- <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
+                <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript"> -->
+                <strong><a href="images\xjtlu_Transcript.png" target="_blank">Check the full official transcript and marking criteria</a></strong>
             </div>
             <!-- <div class="achievements">
                 <p><strong>Note: </strong>  </strong> XJTLU follows the British Marking Criteria:  </p>
