--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         
         <div class="education-block">
             <h3>VisualCodeMOOC: Programming Course Platform Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
-            <h4><strong style="color: #333333;">Li Mingyuan</strong>; Wang Duan; Purwanto Erick; Selig Thomas; Zhang Qing; Liang Hai-Ning</h4>
+            <h4><strong style="color: #333333;">Mingyuan Li</strong>; Duan Wang; Erick Purwanto; Thomas Selig; Qing Zhang; Hai-Ning Liang</h4>
             <div class="gpa">
                 <p><i>SoftwareX [Under Review: Submitted Oct. 2024]</i></p>
             </div>
@@ -256,7 +256,7 @@
 
         <div class="education-block">
             <h3>Chatbot-Powered Learning for Sustainable Education in Programming</h3>
-            <h4>Purwanto Erick; Li Na; Zhang Qing; Selig Thomas; Wang Yihong; Ma Teng; Juwono Filbert; Fan Pengfei, (student member) <strong style="color: #333333;">Li Mingyuan</strong> and Wang Duan</h4>
+            <h4>Erick Purwanto; Na Li; Qing Zhang; Thomas Selig; Yihong Wang; Teng Ma; Filbert Juwono; Pengfei Fan, (student member) <strong style="color: #333333;">Mingyuan Li</strong> and Duan Wang </h4>
             <div class="gpa">
                 <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
             </div>
@@ -266,7 +266,7 @@
         <div class="education-block">
             <h3>Patch-Based Multi-Level Attention Mechanism for Few-Shot Multi-Label Medical Image
                 Classification</h3>
-            <h4><strong style="color: #333333;">Li Mingyuan</strong>; Wang Yichuan; Huang Junfeng; Purwanto Erick; Man Lok Ka</h4>
+            <h4><strong style="color: #333333;">Mingyuan Li</strong>; Yichuan Wang; Junfeng Huang; Erick Purwanto; Ka Lok Man</h4>
             <div class="gpa">
                 <p><i>The 15th International Conference on Cyber-Enabled Distributed Computing and Knowledge
                     Discovery, 2023</i></p>
@@ -277,7 +277,7 @@
         <div class="education-block">
             <h3>Cervical Spine Fracture Detection Through Two-Stage Approach of Mask Segmentation and
                 Windowing Based on Convolutional Neural Network</h3>
-            <h4>Kim Doyeon; Ning Xujia; Liang Kaicheng; Ni Yi; Wang Duan; <strong style="color: #333333;">Li Mingyuan</strong>; Wang Yichuan; Purwanto Erick; Man Lok Ka</h4>
+            <h4>Doyeon Kim; Xujia Ning; Kaicheng Liang; Yi Ni; Duan Wang; <strong style="color: #333333;">Mingyuan Li </strong>; Yichuan Wang; Erick Purwanto; Ka Lok Man</h4>
             <div class="gpa">
                 <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
             </div>
