--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
         <h2 class="heading">Publications</h2>
         
         <div class="education-block">
-            <h3>VisualCodeMOOC: Programming Course Platform Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
+            <h3>VisualCodeMOOC: A Course Platform for Algorithms and Data Structures Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
             <h4><strong style="color: #333333;">Mingyuan Li</strong>; Duan Wang; Erick Purwanto; Thomas Selig; Qing Zhang; Hai-Ning Liang</h4>
             <div class="gpa">
-                <p><i>SoftwareX [Under Review: Submitted Oct. 2024]</i></p>
+                <p><i>SoftwareX [Under Review: Submitted Nov. 2024]</i></p>
             </div>
         </div>
 
