--- a/index.html
+++ b/index.html
@@ -467,8 +467,14 @@
                             BFS-based connected components check. Added data recording and user-friendly guidance modules.</li>
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">Conducted 8 controlled experiments to verify its effectiveness: experiments involved 330 students with varying
                             programming backgrounds from the CPT204 course at XJTLU. One group used our bot for the set learning tasks,
-                            while the other group used AI based on the original GPT. The results showed a significant improvement in learning
-                            efficiency for students using the chatbot. The project was showcased at EdVenture and internal sharing seminars.</li>
+                            while the other group used AI based on the original GPT. Ours outperforms ChatGPT across all dimensions, with T-test p-values below 0.05, confirming statistically significant improvements in usability, effectiveness, and engagement. 
+                            The project was showcased at EdVenture and internal sharing seminars.</li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Authoring a manuscript for BJET, with an anticipated abstract submission by the 1st Jan. 2025.</li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Iterating VisualCodeChat to version 2.0, incorporating multimodal capabilities for experimental validation in multimodal-powered education. </li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Evaluating code quality and algorithm visualization quality of GPT-4o-powered VisualCodeChat 2.0. </li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Conducting 10 experiments, demonstrating its effectiveness in producing satisfactory code quality, effective algorithm visualization, and valid multimodal-powered test case education. </li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Authoring a manuscript for IEEE TSE, with an anticipated submission by the end of 2024.</li>
+                                            
                     </ul>
                 </ol>
             </div>
