--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     }
 
     .zoom-image {
-        transition: transform 0.3s ease, transform-origin 0.3s ease; /* 添加过渡效果 */
-        position: relative; /* 确保图片定位相对于容器 */
-        z-index: 1; /* 提升层级 */
+        transition: transform 0.3s ease, transform-origin 0.3s ease; 
+        position: relative; 
+        z-index: 1; 
     }
 
     .zoom-image:hover {
-        transform: scale(1.3); /* 鼠标悬停时放大图片 */
-        z-index: 10; /* 放大时提升层级，避免被其他元素覆盖 */
+        transform: scale(1.3); 
+        z-index: 10; 
     }
     @font-face {
             font-family: 'SmileySansOblique';
@@ -60,7 +60,7 @@
 
     /* lato-300 - latin */
     @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap; 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 300;
@@ -68,7 +68,7 @@
     }
     /* lato-regular - latin */
     @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap; 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
@@ -76,7 +76,7 @@
     }
     /* lato-700 - latin */
     @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap; 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
@@ -84,7 +84,7 @@
     }
     /* lato-900 - latin */
     @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap; 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 900;
@@ -142,7 +142,7 @@
         <div id="lead-content">
             <h1>Mingyuan Li</h1>
             <h2 class="custom-font-SmileySansOblique">霆霓快雨</h2>
-            <a href="5---CV[3053].pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="CV_Mingyuan.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -195,9 +195,9 @@
     <div id="education" class="background-alt">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Xi’an Jiaotong-Liverpool University</h3>
-            <span class="education-date">September/2021 – July/2025</span>
-            <h4>Bachelor of Information and Computing Science</h4>
+            <h3>Xi'an Jiaotong-Liverpool University</h3>
+            <span class="education-date">September/2021 - July/2025</span>
+            <h4>BSc Information and Computing Science</h4>
             <ul class="course-list">
                 <li><strong>Linear Algebra</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;75</span></li>
                 <li><strong>Calculus</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;83</span></li>
@@ -221,8 +221,9 @@
 
             </ul>
             <div class="gpa">
-                <p><strong>WES GPA:</strong> 3.77/4.0 &nbsp;&nbsp; <strong><a href="#" id="transcriptLink">Check the WES unofficial transcript</a></strong>
-                    <img id="transcriptImage" src="images\wes_report.png" alt="WES Unofficial Transcript"></p> 
+                <p><strong>WES GPA:</strong> 3.77/4.0 &nbsp;&nbsp; 
+                    <strong><a href="images\wes_report.png" target="_blank">Check the WES unofficial transcript</a></strong>
+                </p> 
                 
                 <p><strong>Major GPA:</strong> 3.82/4.0</p>
                 <p> Ranked in the top 1.97% in Java Programming.</p>
@@ -251,7 +252,7 @@
             <h3>VisualCodeMOOC: A Course Platform for Algorithms and Data Structures Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
             <h4><strong style="color: #333333;">Mingyuan Li</strong>; Duan Wang; Erick Purwanto; Thomas Selig; Qing Zhang; Hai-Ning Liang</h4>
             <div class="gpa">
-                <p><i>SoftwareX [Under Review: Submitted Nov. 2024]</i></p>
+                <p><i>SoftwareX (IF: 2.8) </i>[Under Review: Submitted Nov. 2024]</p>
             </div>
         </div>
 
@@ -261,7 +262,7 @@
             <div class="gpa">
                 <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
             </div>
-            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Read the full paper</a></p>
+            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Access the full paper</a></p>
         </div>
 
         <div class="education-block">
@@ -272,7 +273,7 @@
                 <p><i>The 15th International Conference on Cyber-Enabled Distributed Computing and Knowledge
                     Discovery, 2023</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Read the full paper</a></p>
+            <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Access the full paper</a></p>
         </div>
 
         <div class="education-block">
@@ -282,7 +283,7 @@
             <div class="gpa">
                 <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Read the full paper</a></p>
+            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Access the full paper</a></p>
         </div>
     </div>
     <!-- End #education -->
@@ -389,8 +390,8 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Research Experience</h2>
         <div id="experience-timeline">
-            <div data-date="June/2023 – September/2023">
-                <h3> 2023 Summer Undergraduate Research Fellowship (SURF)</h3>
+            <div data-date="June/2023 - September/2023">
+                <h3> <strong>Summer Undergraduate Research Fellowship 2023 (SURF)</strong> </h3>
                 <h4>Research Fellow</h4>
                 <p>
                     Supervisor: 
@@ -425,8 +426,8 @@
                 </ol>
             </div>
 
-            <div data-date=" September/2023 – Present">
-                <h3> Teaching Development Fund Project: AI-based ChatBOT in Programming Education</h3>
+            <div data-date=" September/2023 - Present">
+                <h3> <strong> GenAI-Powered ChatBot in Programming and Algorithm Education</strong></h3>
                 <h4> Research Assistant (Team of Two)</h4>
                 <p>
                     Supervisor: 
@@ -469,11 +470,11 @@
                             programming backgrounds from the CPT204 course at XJTLU. One group used our bot for the set learning tasks,
                             while the other group used AI based on the original GPT. Ours outperforms ChatGPT across all dimensions, with T-test p-values below 0.05, confirming statistically significant improvements in usability, effectiveness, and engagement. 
                             The project was showcased at EdVenture and internal sharing seminars.</li>
-                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Authoring a manuscript for BJET, with an anticipated abstract submission by the 1st Jan. 2025.</li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Authoring a manuscript for <i>British Journal of Educational Technology (IF: 6.7)</i>, with an anticipated abstract submission by the 1st Jan. 2025.</li>
                             <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Iterating VisualCodeChat to version 2.0, incorporating multimodal capabilities for experimental validation in multimodal-powered education. </li>
                             <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Evaluating code quality and algorithm visualization quality of GPT-4o-powered VisualCodeChat 2.0. </li>
                             <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Conducting 10 experiments, demonstrating its effectiveness in producing satisfactory code quality, effective algorithm visualization, and valid multimodal-powered test case education. </li>
-                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Authoring a manuscript for IEEE TSE, with an anticipated submission by the end of 2024.</li>
+                            <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">(In progress) Authoring a manuscript for <i>IEEE Transactions on Software Engineering (IF: 7.4)</i>, with an anticipated submission by the end of 2024.</li>
                                             
                     </ul>
                 </ol>
@@ -592,22 +593,24 @@
             <li>Python (2 Years+)</li>
             <li>Java (3 Years+)</li>
             <li>Typescript (1 Years+)</li>
-            <li>MySQL</li>
-            <li>C</li>
-            <li>C++</li>
+            <li>MySQL (3yrs+)</li>
+            <li>C (1yr)</li>
+            <li>C++ (1yr)</li>
             <li>LaTeX</li>
-            <li>VS Code</li>
-            <li>IntelliJ IDEA</li>
-            <li>PyCharm</li>
-            <li>Google Colab</li>
-            <li>React</li>
-            <li>Spring Boot</li>
+            <li>VS Code (3yrs+)</li>
+            <li>IntelliJ IDEA (3yrs+)</li>
+            <li>PyCharm (3yrs+)</li>
+            <li>Google Colab (2yrs+)</li>
+            <li>React (1yrs+)</li>
+            <li>Next.js (1yr+)</li>
+            <li>Spring Boot (1yr+)</li>
             <li>MMCV</li>
             <li>OpenCV</li>
             <li>PyCOCO</li>
             <li>ultralytics</li>
             <li>PyTorch</li>
             <li>scikit-learn</li>
+            <li>D3.js</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -675,11 +678,11 @@
     <script>
         var link = document.getElementById("transcriptLink");
         var image = document.getElementById("transcriptImage");
-        // 确保初始状态下图片是隐藏的
+
         image.style.display = "none";
-        // 点击后显示/隐藏图片
+
         link.onclick = function(event) {
-            event.preventDefault();  // 防止页面跳转
+            event.preventDefault();  
             if (image.style.display === "none") {
                 image.style.display = "block";
             } else {
@@ -687,14 +690,13 @@
             }
         }
 
-        // 管理第二个图片和链接
     var link2 = document.getElementById("transcriptLink1");
     var image2 = document.getElementById("transcriptImage1");
-    // 确保初始状态下图片是隐藏的
+
     image2.style.display = "none";
-    // 点击后显示/隐藏第二个图片
+
     link2.onclick = function(event) {
-        event.preventDefault();  // 防止页面跳转
+        event.preventDefault();  
         if (image2.style.display === "none") {
             image2.style.display = "block";
         } else {
