--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <img src="images\CPT208.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Honored with an <strong>Honorable Mention</strong> in the CPT208 Human-Centric Computing</h3>
+                        <h3 id="208">Honored with an <strong>Honorable Mention</strong> in the CPT208 Human-Centric Computing</h3>
                         <h3 style="font-size: medium; font-style: italic;"><strong>Top 10%</strong></h3>
                     </div>
                 </div>
@@ -556,7 +556,7 @@
             <h4>Group Member of the Group Project</h4>
             <div class="gpa">
                 <p><li style="font-size: 15 px">
-                    Collaborated in a 5-member team to complete requirement analysis, design, prototyping, evaluation, and iteration using various HCI techniques, culminating in the production of a project presentation, report, and poster, and earning an Honorable Mention (1 of 8).
+                    Collaborated in a 5-member team to complete requirement analysis, design, prototyping, evaluation, and iteration using various HCI techniques, culminating in the production of a project presentation, report, and poster, and earning an <a href="#208">Honorable Mention</a> (1 of 8).
                 </li></p>
             </div>
         </div>
