--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\CyberC.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\CyberC.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved <strong>Third Prize</strong> in the IEEE CyberC 2023 Data Analysis Competition</h3>
@@ -331,7 +331,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\Sypo.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\Sypo.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved <strong>Second Prize</strong> at the 2023 XJTLU Student Research-Oriented Learning Summit</h3>
@@ -366,7 +366,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\EdVenture.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\EdVenture.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Presented project outcomes as a <strong>Guest Speaker</strong> at EdVenture: Exploring Innovative Practices in Higher Education</h3>
@@ -376,7 +376,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\SURF24_School_Winner.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\SchoolWinner.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved the Excellent Poster in SURF 2024 and presented research results at 2024 SURF Poster Fair as a <strong>School Winner</strong>.  </h3>
@@ -651,12 +651,12 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
-                <!-- <div class="col-sm-5 social">
+                <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Sushang-Li" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
@@ -670,9 +670,9 @@
                         </li>
                         <li>
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
-                </div> -->
+                </div>
             </div>
         </div>
     </footer>
