--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                             Reliable questionnaire results (Cronbach's alpha: 0.891) and a high average score of 4.18, supported by qualitative coding, demonstrate the bot met all evaluation criteria.
                         </li>
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;"> 
-                           Authered a manuscript based on the current findings, currently under review by <a href="#VisualCodeMOOC">SoftwareX (IF: 2.8)</a>.
+                           Authered a manuscript based on the current findings, currently under review by <a href="#VisualCodeMOOC"><i>SoftwareX (IF: 2.8)</i></a>.
                         </li>
                     </ul>
                     <strong>Phase Three: Researched the effectiveness and HCI criterias of our design compared to standard GPT in teaching graph algorithms.
