--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\CyberC.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\CyberC.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved <strong>Third Prize</strong> in the IEEE CyberC 2023 Data Analysis Competition</h3>
@@ -376,7 +376,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\SchoolWinner.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\SchoolWinner.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved the Excellent Poster in SURF 2024 and presented research results at 2024 SURF Poster Fair as a <strong>School Winner</strong>.  </h3>
