--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\Sypo.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\Sypo.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved <strong>Second Prize</strong> at the 2023 XJTLU Student Research-Oriented Learning Summit</h3>
@@ -366,7 +366,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\EdVenture.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\EdVenture.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Presented project outcomes as a <strong>Guest Speaker</strong> at EdVenture: Exploring Innovative Practices in Higher Education</h3>
